force-app/main/default/objects/Lead/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>Budget ( In Lac)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>