force-app/main/default/objects/Lead/fields/Budget_In_Lac__c.field-meta.xml
<CustomField>
    <fullName>Budget_In_Lac__c</fullName>
    <label>Budget ( In Lac)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>