force-app/main/default/objects/Lead/fields/Configuration_interested_in__c.field-meta.xml
<CustomField>
    <fullName>Configuration_interested_in__c</fullName>
    <label>Configuration interested in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 BHK</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK Villa</fullName>
            </value>
            <value>
                <fullName>5 BHK</fullName>
                <isActive>false</isActive>
                <label>5 BHK</label>
            </value>
            <value>
                <fullName>6 BHK</fullName>
                <isActive>false</isActive>
                <label>6 BHK</label>
            </value>
            <value>
                <fullName>Duplex</fullName>
                <isActive>false</isActive>
                <label>Duplex</label>
            </value>
            <value>
                <fullName>Online 1 BHK</fullName>
                <isActive>false</isActive>
                <label>Online 1 BHK</label>
            </value>
            <value>
                <fullName>Online 2 BHK</fullName>
                <isActive>false</isActive>
                <label>Online 2 BHK</label>
            </value>
            <value>
                <fullName>Retail</fullName>
                <isActive>false</isActive>
                <label>Retail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>