force-app/main/default/objects/Lead/fields/Current_residence_ownership__c.field-meta.xml
<CustomField>
    <fullName>Current_residence_ownership__c</fullName>
    <label>Current residence ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rented</fullName>
            </value>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Parental / Joint family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>