force-app/main/default/objects/Lead/fields/Flat_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Flat_Unit_Cost__c</fullName>
    <label>Flat / Unit Cost (A)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>