force-app/main/default/objects/Lead/fields/Goods_and_Service_Tax__c.field-meta.xml
<CustomField>
    <fullName>Goods_and_Service_Tax__c</fullName>
    <label>Goods and Service Tax (GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>