force-app/main/default/objects/Lead/fields/Last_PreSales_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_PreSales_Call_Date__c</fullName>
    <label>Last PreSales Call Date</label>
    <type>DateTime</type>
</CustomField>