force-app/main/default/objects/Lead/fields/Last_PreSales_Call_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Last_PreSales_Call_Remarks__c</fullName>
    <label>Last PreSales Call Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>