force-app/main/default/objects/Lead/fields/Last_PreSales_Call_Source__c.field-meta.xml
<CustomField>
    <fullName>Last_PreSales_Call_Source__c</fullName>
    <label>Last PreSales Call Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>