force-app/main/default/objects/Lead/fields/Last_Proposed_Date_of_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Proposed_Date_of_Visit__c</fullName>
    <label>Last Proposed Date of Visit</label>
    <type>DateTime</type>
</CustomField>