force-app/main/default/objects/Lead/fields/Latest_PreSales_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_PreSales_Call_Status__c</fullName>
    <label>Last PreSales Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Visit Confirmed</fullName>
            </value>
            <value>
                <fullName>Visit Done</fullName>
            </value>
            <value>
                <fullName>Visit Proposed</fullName>
            </value>
            <value>
                <fullName>Booking Done</fullName>
            </value>
            <value>
                <fullName>TMC</fullName>
            </value>
            <value>
                <fullName>TMD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>