force-app/main/default/objects/Lead/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <formula>Id</formula>
    <label>Lead ID</label>
    <type>Text</type>
</CustomField>