force-app/main/default/objects/Lead/fields/Location_Interested_in__c.field-meta.xml
<CustomField>
    <fullName>Location_Interested_in__c</fullName>
    <label>Project location Interested in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>