force-app/main/default/objects/Lead/fields/lost_reason_for_dubai__c.field-meta.xml
<CustomField>
    <fullName>lost_reason_for_dubai__c</fullName>
    <label>lost reason for dubai</label>
    <length>125</length>
    <type>Text</type>
</CustomField>