force-app/main/default/objects/Lead/fields/Magic_Bricks_Url__c.field-meta.xml
<CustomField>
    <fullName>Magic_Bricks_Url__c</fullName>
    <label>Magic Bricks Url</label>
    <type>Url</type>
</CustomField>