force-app/main/default/objects/Lead/fields/Master_Source__c.field-meta.xml
<CustomField>
    <fullName>Master_Source__c</fullName>
    <label>Master Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Paper Insert</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
            <value>
                <fullName>Outdoor/Hoarding</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Direct Walk-In</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Realty Expo</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Telecalling</fullName>
            </value>
            <value>
                <fullName>Collaterals</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Content/Blogs</fullName>
            </value>
            <value>
                <fullName>Loyalty Program</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Direct Contact</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Sales Event</fullName>
            </value>
            <value>
                <fullName>Existing Customer Referral</fullName>
            </value>
            <value>
                <fullName>School Referral</fullName>
            </value>
            <value>
                <fullName>Raymond Retail</fullName>
            </value>
            <value>
                <fullName>Other Referral</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>