force-app/main/default/objects/Lead/fields/Next_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Date__c</fullName>
    <label>Next Action Date</label>
    <type>DateTime</type>
</CustomField>