force-app/main/default/objects/Lead/fields/Office_address__c.field-meta.xml
<CustomField>
    <fullName>Office_address__c</fullName>
    <label>Office address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>