force-app/main/default/objects/Lead/fields/Past_Relationship_with_Raymond__c.field-meta.xml
<CustomField>
    <fullName>Past_Relationship_with_Raymond__c</fullName>
    <label>Past Relationship with Raymond</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Raymond Retail</fullName>
            </value>
            <value>
                <fullName>Raymond Loyalty Programme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>