force-app/main/default/objects/Lead/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <label>Office Pincode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>