force-app/main/default/objects/Lead/fields/Pincode_R__c.field-meta.xml
<CustomField>
    <fullName>Pincode_R__c</fullName>
    <label>Pincode (R)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>