force-app/main/default/objects/Lead/fields/Pre_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Sales Rep</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Team_Member__c.Type__c</field>
            <operation>equals</operation>
            <value>Pre-Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>