force-app/main/default/objects/Lead/fields/Prefered_Communication__c.field-meta.xml
<CustomField>
    <fullName>Prefered_Communication__c</fullName>
    <label>Prefered  Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>