force-app/main/default/objects/Lead/fields/Prefered_language__c.field-meta.xml
<CustomField>
    <fullName>Prefered_language__c</fullName>
    <label>Prefered Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>