force-app/main/default/objects/Lead/fields/PreSales_Call_Ageing__c.field-meta.xml
<CustomField>
    <fullName>PreSales_Call_Ageing__c</fullName>
    <formula>IF(
  AND(NOT(ISBLANK(Next_Action_Date__c)),
     OR(ISPICKVAL(Latest_PreSales_Call_Status__c,&apos;Follow Up&apos;),
        ISPICKVAL(Latest_PreSales_Call_Status__c,&apos;Visit Proposed&apos;),
        ISPICKVAL(Latest_PreSales_Call_Status__c,&apos;Visit Done&apos;),
        ISPICKVAL(Latest_PreSales_Call_Status__c,&apos;Open&apos;),
        ISPICKVAL(Latest_PreSales_Call_Status__c,&apos;No Show&apos;),
        ISPICKVAL(Latest_PreSales_Call_Status__c,&apos;Visit Confirmed&apos;)
     ),
     DATEVALUE(Next_Action_Date__c) &lt; TODAY()
  ), TODAY() - DATEVALUE(Next_Action_Date__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PreSales Call Ageing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>