force-app/main/default/objects/Lead/fields/Previous_PreSales_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_PreSales_Call_Status__c</fullName>
    <label>Previous PreSales Call Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>